# RayTracer

./: CMakeLists.txt  README.md  main.cpp
core/: AABB.hpp  BVH.cpp  BVH.hpp  Camera.cpp  Camera.hpp  ConstantMedium.cpp  ConstantMedium.hpp  HitRecord.hpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  Material.hpp  Rotate.cpp  Rotate.hpp  Texture.hpp  ThreadPool.hpp  ThreadsafeQueue.hpp  Translate.cpp  Translate.hpp  Utilities.hpp
material/: Dielectric.cpp  Dielectric.hpp  DiffuseLight.cpp  DiffuseLight.hpp  Isotropic.cpp  Isotropic.hpp  Lambertian.cpp  Lambertian.hpp  Metal.cpp  Metal.hpp
math/: Ray.cpp  Ray.hpp  Vec3.cpp  Vec3.hpp
shapes/: AARect.cpp  AARect.hpp  Box.cpp  Box.hpp  Sphere.cpp  Sphere.hpp  Triangle.hpp
tests/: Math.cpp
textures/: ImageTexture.hpp  SolidColor.hpp
